data/derived/comb/progs/unify/prog3630.ml.out
Characters 46-47:
  List.map f (sepConcat f l);;
                        ^
Error: This expression has type 'a -> 'b
       but an expression was expected of type string
